--- a/style.css
+++ b/style.css
@@ -790,8 +790,10 @@ footer {
 
 .custom-select {
     position: relative;
-    width: 60px;
+    width: 80px;
     cursor: pointer;
+    font-weight: bold;
+    font-size: 0.9rem;
 }
 
 .custom-select .selected {
@@ -800,8 +802,9 @@ footer {
     border-radius: 6px;
     padding: 6px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    gap: 6px;
+    justify-content: center;
 }
 
 .custom-select .options {
@@ -815,12 +818,19 @@ footer {
     display: none;
     flex-direction: column;
     z-index: 999;
+    list-style: none; /* enlève les points */
+    margin: 0;
+    padding: 0;
 }
 
 .custom-select .options li {
     padding: 6px;
     text-align: center;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    justify-content: center;
 }
 
 .custom-select .options li:hover {
@@ -831,5 +841,6 @@ footer {
 .custom-select.open .options {
     display: flex;
 }
+
 
 
